--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "express": "^4.17.1",
     "freeice": "^2.2.2",
     "log4js": "^6.3.0",
@@ -16,6 +20,7 @@
     "react-scripts": "4.0.3",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
+    "typescript": "^4.4.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -45,6 +50,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
