--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/socket.io-client": "^3.0.0",
     "express": "^4.17.1",
     "freeice": "^2.2.2",
     "log4js": "^6.3.0",
@@ -20,6 +22,7 @@
     "react-scripts": "4.0.3",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
