--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "npx nodemon server.js",
+    "start": "npx nodemon server.ts",
     "start-app": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
