--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,12 @@
   },
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "react-hooks"
   ],
   "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "object-curly-spacing": [
       1,
       "always"
