--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^3.4.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -58,9 +58,10 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "eslint": "^6.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.12"
   }
 }
