--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "../node_modules/@types"
     ],
     "target": "es5",
+    "jsx": "react",
     "lib": [
       "dom",
       "dom.iterable",
@@ -22,9 +23,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
-    "jsx": "react-jsx"
   },
   "include": [
     "src"
