fix heroku deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": true,
+    "isolatedModules": true,
+    "noEmit": true
   },
   "include": [
     "src"
-  ],
+  ]
 }
