--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.1",
+    "@types/express": "4.17.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^6.6.0",
