--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "typeRoots": [
       "../node_modules/@types"
     ],
-    "target": "es5",
+    "target": "esnext",
+    "module": "commonjs",
     "jsx": "react",
     "lib": [
       "dom",
@@ -20,7 +21,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
