--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,6 @@
     "typeRoots": [
       "../node_modules/@types"
     ],
-    "target": "esnext",
-    "module": "commonjs",
     "jsx": "react",
     "lib": [
       "dom",
@@ -24,7 +22,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "target": "es5",
+    "module": "esnext"
   },
   "include": [
     "src"
