--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "webrtc",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -56,7 +59,6 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.1",
-    "@types/express": "4.17.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^6.6.0",
