--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "freeice": "^2.2.2",
     "log4js": "^6.3.0",
     "react": "^17.0.2",
+    "react-app-rewire-alias": "^1.1.4",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
@@ -31,7 +33,7 @@
   },
   "scripts": {
     "start": "npx nodemon backend/server.ts",
-    "start:app": "react-scripts start",
+    "start:app": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
