added user-access and change overrides paths

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -16,6 +16,9 @@
       ],
       "@pages/*": [
         "./src/pages/*"
+      ],
+      "@access/*": [
+        "./src/components/room-list/user-access/*"
       ]
     }
   }
